--- a/frontend/src/pages/Report.css
+++ b/frontend/src/pages/Report.css
@@ -7,7 +7,7 @@ height: 20px;
   
     /* Heading 2 <h2> */
   
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-family: 'GFS Didot';
 font-style: normal;
 font-weight: 700;
 font-size: 29px;
