--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,3 +1,4 @@
 body{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    background-image: "linear-gradient(to right, #00395d, #8f8f8c)"
 }
