--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -12,6 +12,7 @@ video{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 40px;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(39, 41, 51, 0.1);
     object-fit: contain;
